<resources>
    <string name="app_name">Mosaic</string>

    <string name="format_card_last_image">+%1$d</string>
    <string name="format_card_comment">댓글 %1$d</string>
    <string name="format_result_header">%1$d개의 결과</string>
    <string name="transition_search">transition_search</string>
    <string name="scarp">스크랩</string>
    <string name="cancel">취소</string>
    <string name="hint_search">검색어를 입력해주세요</string>
    <string name="dash">-</string>
    <string name="pipe">|</string>
    <string name="theme">관심분야</string>
    <string name="my_page_scrap">내가 스크랩한 글</string>
    <string name="my_page_written">내가 작성한 글</string>
    <string name="my_page_reset">인증 초기화</string>

    <string name="email">이메일</string>
    <string name="email_empty">이메일을 적어주세요.</string>
    <string name="confirm_email">이메일 인증</string>
    <string name="email_error">이메일 전송에 실패하였습니다.</string>
    <string name="auth_email_error">인증에 실패하였습니다. 다시 시도해주세요.</string>

    <string name="use_agreement_left">이메일 인증시, 모자이크\u0020</string>
    <string name="use_agreement_center"><u>서비스 약관</u></string>
    <string name="use_agreement_right">에 동의하는 것으로 간주합니다.</string>

    <string name="use_agreement_title">서비스 약관</string>
    <string name="use_agreement_contents">커뮤니티의 게시판, 게시물 일체를 내용복사, 스크린샷 등을\n
        통해 절대로 외부로 유출할 수 없습니다.\n\n
        정보통신망법에 의해 허가받지 않은 홍보물을 게시해서는\n
        안됩니다.\n\n
        - 쇼핑몰, 오픈마켓, 소셜커머스 등의 홍보\n
        - 광고가 있는 카페, 블로그, 커뮤니티, 앱의 추천, 홍보,방문유도 등\n
        - 어학원, 의료업체, 홍보업체 등의 홍보\n\n
        커뮤니티 이용규칙을 어길 시 접근 제한 또는 법적 조치가\n
        취해질 수 있습니다.</string>
    <string name="use_agreement_agree">확인</string>
    <string name="check_email_text">이메일을 확인해주세요.</string>
    <string name="check_email">이메일 확인</string>

    <string name="user_email_right">으로 인증 메일이</string>
    <string name="user_email_center">발송되었습니다. 메일에 있는 \'인증하기\'버튼 혹은</string>
    <string name="user_email_bottom">링크를 클릭해주세요.</string>
    <string name="invalid_email_format">이메일 형식이 올바르지 않습니다.</string>

    <string name="select_category">카테고리 선택</string>
    <string name="write_content_save">저장</string>

    <string name="reply">댓글</string>
    <string name="write_reply">댓글을 입력하세요.</string>
    <string name="write_rereply_text">답글</string>

    <string name="no_reply">아직 댓글이 없습니다. 또르르 :(</string>
    <string name="get_reply_response_error">댓글을 불러오는데 실패하였습니다.</string>
    <string name="add_reply_response_error">댓글을 작성하는데 실패하였습니다.</string>
    <string name="delete_script_response_error">글을 삭제하는데 실패하였습니다.</string>

    <string name="empty_reply">댓글을 작성해주세요.</string>

    <string name="delete_card">삭제하기</string>
    <string name="my_badge">MY</string>
</resources>

